--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-query-devtools": "^5.69.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "eslint-plugin-storybook": "^0.11.4",
     "eslint-plugin-unused-imports": "^4.1.4",
@@ -35,6 +36,7 @@
     "react-loading-indicators": "^1.0.0",
     "react-redux": "^9.2.0",
     "sass": "^1.86.0",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
