--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@google/generative-ai": "^0.24.0",
     "@mui/material": "^6.4.5",
     "@next/third-parties": "^15.2.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -31,8 +32,10 @@
     "next": "14.2.8",
     "next-themes": "^0.4.6",
     "npm": "^11.2.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.0",
     "react-redux": "^9.2.0",
     "sass": "^1.86.0",
